# src/handler/AllianceHandler.js
@@ -5,7 +5,7 @@
 
 	class AllianceHandler extends EntityHandler {
 
-		static filter () {
+		static filterAlliances () {
 			return async (req, res) => {
 				console.log(req.body);
 				let store 			= await AllianceHandler.getStore();
@@ -17,26 +17,26 @@
 			};
 		}
 
-		static getById () {
+		static getAllianceById () {
 			return async (req, res) => {
 				let store 		= await AllianceHandler.getStore();
-				let alliance 	= await store.findOrCreate(req.params.id - 0);
+				let alliance 	= await store.findOrCreate(req.swagger.params.allianceID.value);
 				res.json(await alliance.toJSON());
 			};
 		}
 
-		static getExecutor () {
+		static getAlliancesExecutor () {
 			return async (req, res) => {
 				let store 		= await AllianceHandler.getStore();
-				let alliance 	= await store.findById(req.params.id - 0);
+				let alliance 	= await store.findById(req.swagger.params.allianceID.value);
 				res.json(await alliance.getExecutor().toJSON());
 			};
 		}
 
-		static getCorporations () {
+		static getAlliancesCorporations () {
 			return async (req, res) => {
 				let store 		= await AllianceHandler.getStore();
-				let alliance 	= await store.findById(req.params.id - 0);
+				let alliance 	= await store.findById(req.swagger.params.allianceID.value);
 				res.json(await alliance.getCorporations().toJSON());
 			};
 		}
